[project]
name = "tiled-export"
version = "0.4.0"
authors = [
  { name="Mark Wolfman", email="wolfman@anl.gov" },
]
description = "tiled-export"
readme = "README.rst"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: MIT License",
    "Typing :: Typed",
]
keywords = []
dependencies = ["h5py", "tqdm", "tabulate", "httpx", "h2", "odfpy", "tiled[client] @ https://github.com/spc-group/tiled/releases/download/v0.1.0b36/tiled-0.1.0b37.dev7+g52f22d8cb-py3-none-any.whl"]

[dependency-groups]
dev = ["black", "pytest", "ruff", "isort", "mypy", "pytest_httpx", "pytest-asyncio", "build", "twine", "ipython"]

[project.urls]
Homepage = "https://github.com/spc-group/tiled-export"

[project.scripts]
"export-runs" = "tiled_export.export:main"

[tool.isort]
profile = "black"

[tool.mypy]
files = ["src/"]
follow_imports = "skip"
follow_untyped_imports = true

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82", "F401"]
