[project]
name = "tiled-export"
version = "0.5.0"
authors = [
  { name="Mark Wolfman", email="wolfman@anl.gov" },
]
description = "tiled-export"
readme = "README.rst"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "License :: OSI Approved :: BSD License",
    "Typing :: Typed",
]
keywords = []
dependencies = [
    "h5py",
    "tqdm",
    "tabulate",
    "httpx",
    "h2",
    "openpyxl",
    "odfpy",
    "pyarrow",
    "tiled[client] @ git+https://github.com/spc-group/tiled.git@async_client",
    "nbformat",
    "hollowfoot >= 0.5.1",
    "mergedeep",
    "tomlkit",
]

[dependency-groups]
dev = [
    "black[jupyter]",
    "pytest",
    "ruff",
    "isort",
    "mypy",
    "pytest_httpx",
    "pytest-asyncio",
    "pytest-mock",
    "build",
    "twine",
    "ipython",
    "tiled[server]",
]

[project.urls]
Homepage = "https://github.com/spc-group/tiled-export"

[project.scripts]
"export-runs" = "tiled_export.export:main"

[tool.isort]
profile = "black"

[tool.mypy]
files = ["src/"]
follow_imports = "skip"
follow_untyped_imports = true

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82", "F401"]

# [tool.uv.sources]
# hollowfoot = { path = "../hollowfoot", editable = true }
